fixed spacing on home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,7 +11,6 @@ $navbar-default-bg: #073B15;
   background-image: asset-url('cover_image.jpg');
   background-size: cover;
   height: 350px;
-  margin-bottom: 50px;
 }
 
 #logo {
@@ -67,3 +66,6 @@ footer {
   text-align: center;
 }
 
+#row2 {
+  margin-bottom: 50px;
+}
